Settings menu option removed

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,9 +11,9 @@
         android:icon="@mipmap/relay"
         android:title="@string/title_relays" />
 
-    <item
-        android:id="@+id/navigation_settings"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_settings" />
+    <!--<item-->
+    <!--android:id="@+id/navigation_settings"-->
+    <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
+    <!--android:title="@string/title_settings" />-->
 
 </menu>
