--- a/app/src/main/res/layout/fragment_sensor_status.xml
+++ b/app/src/main/res/layout/fragment_sensor_status.xml
@@ -9,20 +9,19 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginEnd="-2dp"
         android:gravity="center_vertical"
-        android:textColor="@android:color/black"
         android:textSize="16sp" />
+        <!--android:layout_marginEnd="-2dp"-->
+        <!--android:textColor="@android:color/black"-->
 
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/switchR"
+    <TextView
+        android:id="@+id/statusS"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@id/textView"
-        android:focusable="true"
-        android:theme="@style/SCBSwitch"/>
+        android:textSize="16sp"
+        android:gravity="center_vertical"/>
 
     <View
         android:layout_width="match_parent"
