--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="border_width">2dp</dimen>
     <dimen name="row_height">68dp</dimen>
     <dimen name="button_height">48dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
