--- a/app/src/main/res/layout/fragment_graph.xml
+++ b/app/src/main/res/layout/fragment_graph.xml
@@ -20,6 +20,26 @@
             android:background="@color/colorPrimaryDark"
             android:gravity="bottom"
             android:padding="8dp"
+            android:text="@string/title_attic"
+            android:textColor="@android:color/holo_blue_bright"
+            android:textSize="14sp"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:id="@+id/graphAttic"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"
+            android:gravity="bottom"
+            android:layout_marginTop="30dp"
+            android:padding="8dp"
             android:text="@string/title_garden"
             android:textColor="@android:color/holo_blue_bright"
             android:textSize="14sp"
