--- a/app/src/main/res/layout/fragment_singlerelay.xml
+++ b/app/src/main/res/layout/fragment_singlerelay.xml
@@ -14,7 +14,7 @@
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
-    <android.support.v7.widget.SwitchCompat
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/switchR"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
