--- a/app/src/main/res/layout/fragment_ventilation.xml
+++ b/app/src/main/res/layout/fragment_ventilation.xml
@@ -158,7 +158,7 @@
             android:layout_marginEnd="16dp"
             android:layout_toStartOf="@+id/symbol2"
             android:gravity="center_vertical"
-            android:text="@string/fan_dew_threshold"
+            android:text="@string/dew_difference"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
 
