Removed Home temperature sensor

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,27 +17,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="@color/colorPrimaryDark"-->
+        <!--android:gravity="bottom"-->
+        <!--android:padding="8dp"-->
+        <!--android:text="@string/title_home"-->
+        <!--android:textColor="@android:color/holo_blue_bright"-->
+        <!--android:textSize="14sp"-->
+        <!--android:textStyle="bold" />-->
+
+        <!--<RelativeLayout-->
+        <!--android:id="@+id/homeSensorLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical" />-->
+
+
+        <!--android:layout_marginTop="30dp"-->
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="bottom"
-            android:padding="8dp"
-            android:text="@string/title_home"
-            android:textColor="@android:color/holo_blue_bright"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/homeSensorLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
             android:background="@color/colorPrimaryDark"
             android:gravity="bottom"
             android:padding="8dp"
