Changed charting library to MPAdroidChart

--- a/app/src/main/res/layout/fragment_singlegraph.xml
+++ b/app/src/main/res/layout/fragment_singlegraph.xml
@@ -15,7 +15,7 @@
         android:textColor="@android:color/black"
         android:textSize="16sp" />
 
-    <com.jjoe64.graphview.GraphView
+    <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/graph"
         android:layout_width="match_parent"
         android:layout_height="150dip"
