--- a/app/src/main/res/layout/fragment_singlegraph.xml
+++ b/app/src/main/res/layout/fragment_singlegraph.xml
@@ -45,6 +45,18 @@
             android:textSize="12sp" />
 
         <RadioButton
+            android:id="@+id/g_week"
+            android:layout_width="@dimen/g_button_width"
+            android:layout_height="@dimen/g_button_height"
+            android:background="@drawable/radio_flat_selector"
+            android:button="@android:color/transparent"
+            android:checked="false"
+            android:fontFamily="sans-serif-condensed-medium"
+            android:gravity="center"
+            android:text="@string/Week"
+            android:textSize="12sp" />
+
+        <RadioButton
             android:id="@+id/g_day"
             android:layout_width="@dimen/g_button_width"
             android:layout_height="@dimen/g_button_height"
@@ -53,19 +65,8 @@
             android:checked="true"
             android:fontFamily="sans-serif-condensed-medium"
             android:gravity="center"
-            android:text="@string/Day"
-            android:textSize="12sp" />
-
-        <RadioButton
-            android:id="@+id/g_hour"
-            android:layout_width="@dimen/g_button_width"
-            android:layout_height="@dimen/g_button_height"
-            android:background="@drawable/radio_flat_selector"
-            android:button="@android:color/transparent"
-            android:fontFamily="sans-serif-condensed-medium"
-            android:gravity="center"
             android:padding="0dp"
-            android:text="@string/Hour"
+            android:text="@string/Day"
             android:textSize="12sp" />
     </RadioGroup>
 
