Dynamic sensor loading

--- a/app/src/main/res/layout/activity_automation_config.xml
+++ b/app/src/main/res/layout/activity_automation_config.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/ic_save"
+        app:backgroundTint="@color/colorPrimaryLight"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
