--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,8 +7,9 @@
     tools:context=".fragments.HomeFragment">
 
     <LinearLayout
+        android:id="@+id/sensorPlaceholder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:paddingLeft="@dimen/activity_vertical_margin"
         android:paddingTop="@dimen/activity_horizontal_margin"
@@ -16,78 +17,5 @@
         android:paddingBottom="@dimen/activity_horizontal_margin"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
-        <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:background="@color/colorPrimaryDark"-->
-        <!--android:gravity="bottom"-->
-        <!--android:padding="8dp"-->
-        <!--android:text="@string/title_home"-->
-        <!--android:textColor="@android:color/holo_blue_bright"-->
-        <!--android:textSize="14sp"-->
-        <!--android:textStyle="bold" />-->
-
-        <!--<RelativeLayout-->
-        <!--android:id="@+id/homeSensorLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:orientation="vertical" />-->
-
-
-        <!--android:layout_marginTop="30dp"-->
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="bottom"
-            android:padding="8dp"
-            android:text="@string/title_attic"
-            android:textColor="@android:color/holo_blue_bright"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/atticSensorLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="bottom"
-            android:padding="8dp"
-            android:text="@string/title_garden"
-            android:textColor="@android:color/holo_blue_bright"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/gardenSensorLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:background="@color/colorPrimaryDark"
-            android:gravity="bottom"
-            android:padding="8dp"
-            android:text="@string/title_cellar"
-            android:textColor="@android:color/holo_blue_bright"
-            android:textSize="14sp"
-            android:textStyle="bold" />
-
-        <RelativeLayout
-            android:id="@+id/cellarSensorLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" />
-
     </LinearLayout>
 </ScrollView>
