--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="black">#000000</color>
     <color name="transparentGray">#70000000</color>
+    <color name="holo_blue_bright">#00DDFF</color>
 </resources>
